[package]
name = "lens"
version = "0.1.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
crossterm = { version = "0.29.0", features = ["event-stream"] }
glob = "0.3.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.2"
tui-input = "0.15.0"
